[gd_scene load_steps=3 format=3 uid="uid://cbbvoqvcdnw2h"]

[ext_resource type="Script" path="res://Scenes/RequestsWindow/Categories/ExpenseItems.gd" id="1_5epfy"]
[ext_resource type="Script" path="res://Scenes/RequestsWindow/RequestPerformer.gd" id="2_g2fba"]

[node name="ExpenseItems" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5epfy")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 720.0
theme_override_font_sizes/font_size = 52

[node name="GET" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/GET"]
layout_mode = 0
offset_right = 640.0
offset_bottom = 635.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/GET/ScrollContainer"]
layout_mode = 2

[node name="All expense items" type="Button" parent="TabContainer/GET/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "All expense items"

[node name="Expense item by id" type="Button" parent="TabContainer/GET/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Expense item by id
"

[node name="Charges by expense item id" type="Button" parent="TabContainer/GET/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Charges by expense item id"

[node name="IDInput" type="LineEdit" parent="TabContainer/GET"]
layout_mode = 2
offset_left = 472.0
offset_top = 112.0
offset_right = 600.0
offset_bottom = 176.0
theme_override_font_sizes/font_size = 32
placeholder_text = "id:"

[node name="POST" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/POST"]
layout_mode = 0
offset_left = 8.0
offset_top = 96.0
offset_right = 504.0
offset_bottom = 704.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/POST/ScrollContainer"]
layout_mode = 2

[node name="Add expense item" type="Button" parent="TabContainer/POST/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Expense item"

[node name="Name" type="LineEdit" parent="TabContainer/POST"]
layout_mode = 2
offset_left = 392.0
offset_top = 104.0
offset_right = 527.0
offset_bottom = 157.0
theme_override_font_sizes/font_size = 32
placeholder_text = "name:"
expand_to_text_length = true

[node name="PUT" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/PUT"]
layout_mode = 0
offset_top = 88.0
offset_right = 568.0
offset_bottom = 712.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/PUT/ScrollContainer"]
layout_mode = 2

[node name="Update expense item" type="Button" parent="TabContainer/PUT/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Update expense item"

[node name="ID" type="LineEdit" parent="TabContainer/PUT"]
layout_mode = 0
offset_left = 480.0
offset_top = 192.0
offset_right = 608.0
offset_bottom = 245.0
theme_override_font_sizes/font_size = 32
placeholder_text = "id:"

[node name="Name" type="LineEdit" parent="TabContainer/PUT"]
layout_mode = 0
offset_left = 472.0
offset_top = 264.0
offset_right = 600.0
offset_bottom = 317.0
theme_override_font_sizes/font_size = 32
placeholder_text = "name:"

[node name="DELETE" type="TabBar" parent="TabContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/DELETE"]
layout_mode = 0
offset_top = 80.0
offset_right = 640.0
offset_bottom = 576.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/DELETE/ScrollContainer"]
layout_mode = 2

[node name="Delete expense item" type="Button" parent="TabContainer/DELETE/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Delete expense item"

[node name="ID" type="LineEdit" parent="TabContainer/DELETE"]
layout_mode = 0
offset_left = 440.0
offset_top = 80.0
offset_right = 568.0
offset_bottom = 133.0
theme_override_font_sizes/font_size = 32
placeholder_text = "id:"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 640.0
offset_right = 1280.0
offset_bottom = 720.0
theme_override_font_sizes/normal_font_size = 16
text = "text"
scroll_following = true

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 1192.0
offset_top = 584.0
offset_right = 1237.0
offset_bottom = 680.0
theme_override_font_sizes/font_size = 64
text = "<"

[node name="RequestPerformer" type="Node" parent="."]
script = ExtResource("2_g2fba")

[node name="HTTPRequest" type="HTTPRequest" parent="RequestPerformer"]

[connection signal="tab_clicked" from="TabContainer/GET" to="." method="_on_get_tab_clicked"]
[connection signal="button_up" from="TabContainer/GET/ScrollContainer/VBoxContainer/All expense items" to="." method="_on_all_expense_items_button_up"]
[connection signal="button_up" from="TabContainer/GET/ScrollContainer/VBoxContainer/Expense item by id" to="." method="_on_expense_item_by_id_button_up"]
[connection signal="button_up" from="TabContainer/GET/ScrollContainer/VBoxContainer/Charges by expense item id" to="." method="_on_charges_by_expense_item_id_button_up"]
[connection signal="tab_clicked" from="TabContainer/POST" to="." method="_on_post_tab_clicked"]
[connection signal="button_up" from="TabContainer/POST/ScrollContainer/VBoxContainer/Add expense item" to="." method="_on_add_expense_item_button_up"]
[connection signal="button_up" from="TabContainer/PUT/ScrollContainer/VBoxContainer/Update expense item" to="." method="_on_update_expense_item_button_up"]
[connection signal="button_up" from="TabContainer/DELETE/ScrollContainer/VBoxContainer/Delete expense item" to="." method="_on_delete_expense_item_button_up"]
[connection signal="button_up" from="Back" to="." method="_on_back_button_up"]
[connection signal="response_ready" from="RequestPerformer" to="." method="_on_request_performer_response_ready"]
[connection signal="request_completed" from="RequestPerformer/HTTPRequest" to="RequestPerformer" method="_on_http_request_request_completed"]
